# SharedSKILLS

fund-wiki/engine/: pyproject.toml
fund-wiki/engine/scripts/: _bootstrap.py  build_product_profiles.py  build_profile_index.py  ingest_raw_docs.py  query_product_profiles.py
fund-wiki/engine/src/fund_profile_wiki/: __init__.py  config.py
fund-wiki/engine/src/fund_profile_wiki/cache/: __init__.py  file_manifest.py
fund-wiki/engine/src/fund_profile_wiki/extraction/: __init__.py  llm_client.py  source_catalog.py  source_note_builder.py
fund-wiki/engine/src/fund_profile_wiki/health/: __init__.py  health_check.py
fund-wiki/engine/src/fund_profile_wiki/index/: __init__.py  profile_index.py  relation_index.py
fund-wiki/engine/src/fund_profile_wiki/logging/: __init__.py  progress.py
fund-wiki/engine/src/fund_profile_wiki/notes/: __init__.py  diligence_note_reader.py  source_note_validator.py
fund-wiki/engine/src/fund_profile_wiki/parsing/: __init__.py  document_parser.py
fund-wiki/engine/src/fund_profile_wiki/profiles/: __init__.py  manager_alias_registry.py  manager_wiki_compiler.py  product_name_normalizer.py  profile_quality.py  (+2 more)
fund-wiki/engine/templates/: product_profile_auto.md  prompt_diligence_extract.md
fund-wiki/engine/tests/: test_deposit_manager_validation.py  test_heuristic_enhancements.py  test_local_parsed_cache.py  test_parallel_ingest.py  test_product_name_quality.py  test_profile_index_rebuild.py  test_profile_query_engine.py  test_profile_structured_fields.py  test_source_catalog.py  test_strategy_tag_relations.py  test_strategy_taxonomy.py
(+374 files in other folders)
