[project]
name = "fund-profile-wiki"
version = "0.1.0"
description = "Independent LLM-readable fund profile wiki builder."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0",
  "PyMuPDF>=1.23.0",
  "python-pptx>=0.6.21",
  "python-docx>=0.8.11",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

